[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket", features = ["tls"]}
chrono = "0.4.24"
serde_json = "1.0.95"
serde = "1.0.159"
uuid = "1.3.0"

sqlx = { version = "0.6.3", features = ["chrono", "mysql", "runtime-tokio-rustls", "migrate", "offline"] }
sha3 = "0.10.6"
digest = "0.10.6"
